# jmc

./: .gitattributes  .gitignore  404.html  CNAME  CODE_OF_CONDUCT.md  Cargo.toml  Code  HJMC-icon.psd  JMC-icon.psd  LICENSE  README.md  SECURITY.md  Type  asset-manifest.json  build.bat  build_linux.sh  build_requirements.txt  code_test.bat  code_test_linux.sh  compile.py  config.py  craco.config.js  index.html  jmc_config.json  main.kv  main.py  main_nogui.py  pack.mcmeta  package-lock.json  package.json  pre-commit  requirements.txt  setup.py  tailwind.config.js  test.txt  test_all.py  testing.custom_testing.py.example  upload.bat  upload_linux.sh
.github/ISSUE_TEMPLATE/: bug_report.md  built-in-function-request.md  feature_request.md  function_request.md  submit-example.md  submit_example.md  typo_report.md
data/name/: jmc.txt
data/test/: jmc.txt
datapacks/: pack.mcmeta
docs/: features.md  index.md  warnings.md
jmc/: __init__.py  _class.py  _for.py  _while.py  args_parse.py  builtin_function.py  command.py  compile.py  config.py  datapack.py  exception.py  for.py  function.py  if_else.py  imports.py  lexer.py  load_json.py  log.py  module.py  pack_global.py  tokenizer.py  utils.py  vanilla_command.py
jmc/command/: __init__.py  _exclude_execute.py  _execute_excluded.py  _flow_control.py  _jmc_command.py  _load_once.py  jmc.py  (+12 more)
patch_notes/: v.1.1.0-alpha.md  v1.0.0-alpha.2.txt
public/: index.html  manifest.json
src/: App.tsx  index.css  index.css.map  index.scss  index.tsx  main.py  main.rs  run.py  setup.py
test/: run.py
tests/: tokenizer_test.py
(+736 files in other folders)
