[package]
name = "jmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
once_cell = "1.19.0"
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.10.4"
serde_json = "1.0.117"
